--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ type Props = {
 const { title } = Astro.props;
 ---
 
-<footer class="foot">&copy; 2025 fhack it</footer>
+<footer class="foot">&copy; 2025 {title}</footer>
 
 <style>
     body {
