--- a/src/components/Loading.astro
+++ b/src/components/Loading.astro
@@ -5,14 +5,41 @@ type Props = {
 const { delay } = Astro.props;
 ---
 
-<div class="loading-box">
-    Loading ...
+<div class="loading-box" data-delay={delay}>
+    Loading
+    <span class="dot">.</span>
+    <span class="dot">.</span>
+    <span class="dot">.</span>
 </div>
+
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const loadingBox = document.querySelector('.loading-box') as HTMLElement;
+        const totalDelay = Number(loadingBox.dataset.delay); // Use dataset to access data attributes
+        // console.log('Total Delay:', totalDelay);
+        // if (isNaN(totalDelay)) {
+        //     console.error('Delay is NaN, check data-delay attribute');
+        // }
+        const interval = totalDelay / 4;
+        const dots = document.querySelectorAll('.dot');
+        dots.forEach((dot, index) => {
+            setTimeout(() => {
+                (dot as HTMLElement).style.opacity = '1';
+            }, interval * (index + 1));
+        });
+    });
+</script>
+
 
 <style>
     .loading-box {
         border: 0.1em solid #39ff14;
         padding: 1em;
         text-align: center;
+    }
+
+    .dot {
+        opacity: 0;
     }
 </style>
