feat: add theme toggler component and enhance navigation with theme switcher

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import { siteMetadata } from "../siteMetadata";
+import ThemeToggler from "./ThemeToggler.astro";
 ---
 
 <h1><a href="/">{siteMetadata.title}</a></h1>
