--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
     background-color: #101010;
     text-transform: lowercase;
     color: #39ff14;
-    font-family: "Courier New", Courier, monospace;
+    /* font-family: "Courier New", Courier, monospace; */
     font: 0.9rem "Courier New", Courier, monospace;
 }
 
