--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -18,6 +18,7 @@ const { title, last_modified } = Astro.props;
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="Content-Language" content="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="generator" content={Astro.generator} />
         <meta name="description" content="al and stuff" />
