fix: update image paths in ThemeToggler component

--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -1,7 +1,7 @@
 <button aria-label="Switch Mode" class="switch-mode-button">
     <div class="image-container">
-        <img src="/src/assets/businessgreen.png" alt="Business Mode" class="switch-mode-image" />
-        <img src="/src/assets/pirateblack.png" alt="Hacker Mode" class="switch-mode-image" />
+        <img src="/assets/businessgreen.png" alt="Business Mode" class="switch-mode-image" />
+        <img src="/assets/pirateblack.png" alt="Hacker Mode" class="switch-mode-image" />
     </div>
 </button>
 
