--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -20,7 +20,8 @@
 }
 
 .switch-mode-button:active {
-    transform: translate(1px, 1px); 
+    /* transform: translate(1px, 1px);  */
+    transform: scale(0);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); /* Reduce shadow for pressed effect */
 }
 
@@ -28,6 +29,7 @@
     position: relative; /* Container for stacking images */
     width: 100%; /* Match the button's width */
     height: 100%; /* Match the button's height */
+    pointer: cursor; /* Add pointer cursor */
 }
 
 .switch-mode-image {
