refactor: remove ThemeToggler component and update navigation links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import ThemeToggler from "./ThemeToggler.astro";
 
 <div class="theme-toggler-container">
     <h1><a href="/">{siteMetadata.title}</a></h1>
-    <ThemeToggler />
+    <!-- <ThemeToggler /> -->
 </div>
 <style>
     .theme-toggler-container {
