--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,15 +1,15 @@
 ---
-import ThemeToggler from "./ThemeToggler.astro";
+// import ThemeToggler from "./ThemeToggler.astro";
 
 
 ---
 
 <nav>
     <ul class="navigation__links">
+        <li><a href="#">home</a></li>
+        <li><a href="#">bio</a></li>
         <li><a href="#">blog</a></li>
-        <li><a href="#">other 1</a></li>
-        <li><a href="#">other 2</a></li>
-        <li><a href="#">other 3</a></li>
+        <li><a href="#">contact</a></li>
 
         <!-- <li><a href="/resume">resume</a></li> -->
     </ul>
