--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,10 +6,10 @@
 
 <nav>
     <ul class="navigation__links">
-        <li><a href="#">home</a></li>
-        <li><a href="#">bio</a></li>
-        <li><a href="#">blog</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a href="/home">home</a></li>
+        <li><a href="/bio">bio</a></li>
+        <li><a href="/blog">blog</a></li>
+        <li><a href="/contact">contact</a></li>
 
         <!-- <li><a href="/resume">resume</a></li> -->
     </ul>
