feat: update navigation links to use title case and enhance bio, blog, and contact page titles

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,10 +6,10 @@
 
 <nav>
     <ul class="navigation__links">
-        <li><a href="/home">home</a></li>
-        <li><a href="/bio">bio</a></li>
-        <li><a href="/blog">blog</a></li>
-        <li><a href="/contact">contact</a></li>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/bio">Bio</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/contact">Contact</a></li>
 
         <!-- <li><a href="/resume">resume</a></li> -->
     </ul>
