--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,4 +3,4 @@ import Main from "../layouts/Main.astro";
 import { siteMetadata } from "../siteMetadata";
 ---
 
-<Main title={`${siteMetadata.title} → blog`} last_modified="1734771487"></Main>
+<Main title={`${siteMetadata.title} → Blog`} last_modified="1734771487"></Main>
