--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,4 +3,4 @@ import Main from "../layouts/Main.astro";
 import { siteMetadata } from "../siteMetadata";
 ---
 
-<Main title={`${siteMetadata.title} → contact`} last_modified="1734771487"></Main>
+<Main title={`${siteMetadata.title} → Contact`} last_modified="1734771487"></Main>
