feat: add Conway's Game of Life implementation with dynamic seeding and responsive canvas

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,9 @@
 ---
 import Main from "../layouts/Main.astro";
+import ContactSidebar from "../components/ContactSidebar.astro";
 import { siteMetadata } from "../siteMetadata";
 ---
 
-<Main title={`${siteMetadata.title} → Contact`} last_modified="1734771487"></Main>
+<Main title={`${siteMetadata.title} → Contact`} last_modified="1734771487">
+    <ContactSidebar />
+</Main>
