--- a/src/pages/matrix.astro
+++ b/src/pages/matrix.astro
@@ -5,6 +5,6 @@ import MatrixComponent from "../components/Matrix.astro";
 import { siteMetadata } from "../siteMetadata";
 ---
 
-<Main title={`${siteMetadata.title} → Contact`} last_modified="1734771487">
+<!-- <Main title={`${siteMetadata.title} → Contact`} last_modified="1734771487"> -->
     <MatrixComponent />
-</Main>
+<!-- </Main> -->
