--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -7,8 +7,8 @@
 <nav>
     <ul class="navigation__links">
         <li><a href="/home">Home</a></li>
-        <li><a href="/bio">Bio</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <!-- <li><a href="/bio">Bio</a></li>
+        <li><a href="/blog">Blog</a></li> -->
         <li><a href="/contact">Contact</a></li>
 
         <!-- <li><a href="/resume">resume</a></li> -->
